# openclaw-rust-toolkit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rules.example.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_report.yml  good-first-issue-arm64.md  good-first-issue-signing.md  good-first-issue-tests.md
.github/workflows/: ci.yml  deploy-health.yml  release.yml
docs/: BENCHMARK_2026-03-20.md  CLEAR_METRICS_EXAMPLES.md  COMMUNITY_PLAYBOOK.md  COMPATIBILITY.md  CROSS_PLATFORM_INSTALL.md  ENTERPRISE_READINESS.md  EXECUTION_PLAN_14D_LOCAL_FIRST.md  FULL_AUDIT_2026-03-20.md  FULL_AUDIT_LOOP2_2026-03-20.md  IMPLEMENTATION_SPEC.md  LAST_DEPLOY_STATUS.md  LAUNCH_POST_DE.md  LAUNCH_POST_EN.md  LOCAL_EMBEDDINGS_LANE_PR2.md  LOCAL_FIRST_ROUTING_ARCHITECTURE.md  LOCAL_REQUIREMENTS.md  MOAT_POSITIONING.md  ONE_LINER_INSTALL.md  OPENAI_TOKEN_BENCHMARK.md  OPENCLAW_INTEGRATION.md  PRODUCT_GUARDRAILS.md  PROFILE_GUIDE.md  QA_VALIDATION_2026-03-23_LOCAL_EMBEDDINGS_PR2.md  QA_VALIDATION_2026-03-23_LOCAL_FIRST_PR1.md  UPGRADE_SAFE_STRATEGY.md
policies/: router.toml
profiles/: aggressive.toml  balanced.toml  safe.toml
scripts/: install.ps1  install.sh  last-deploy-status.ps1  last-deploy-status.sh  openclaw-wrap.sh  secret-check.sh
src/: embeddings.rs  main.rs  router.rs
