[package]
name = "openclaw-rust-toolkit"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Optional Rust condensing layer for OpenClaw command output with activation rules and benefit reporting"
repository = "https://github.com/skbotoc1-web/openclaw-rust-toolkit"

[[bin]]
name = "octk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
